--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,9 @@ cmake_minimum_required(VERSION 3.0.0)
 project(viz VERSION 0.1.0)
 
 include(CTest)
-enable_testing()
-
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS ON)
 add_executable(vrk main.cpp functions.cpp datatypes.cpp)
 add_executable(viz4web main.cpp functions.cpp datatypes.cpp)
 add_executable(vizier main.cpp functions.cpp datatypes.cpp)
