--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,9 @@ include(CTest)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS ON)
-add_executable(vrk main.cpp functions.cpp datatypes.cpp)
-add_executable(viz4web main.cpp functions.cpp datatypes.cpp)
-add_executable(vizier main.cpp functions.cpp datatypes.cpp)
+add_executable(vrk main.cpp functions.cpp datatypes.cpp switch.cpp)
+add_executable(viz4web main.cpp functions.cpp datatypes.cpp switch.cpp)
+add_executable(vizier main.cpp functions.cpp datatypes.cpp switch.cpp)
 target_compile_definitions(viz4web PUBLIC VIZ4WEB)
 target_compile_definitions(vizier PUBLIC DEBUG)
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
