--- a/assembler/CMakeLists.txt
+++ b/assembler/CMakeLists.txt
@@ -6,8 +6,9 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS ON)
 
-add_subdirectory(assembler)
-add_subdirectory(runtime)
+add_executable(vsm assembler.cpp functions_assembler.cpp switch.cpp)
+add_executable(vsm4web assembler.cpp functions_assembler.cpp switch.cpp)
+target_compile_definitions(vsm4web PUBLIC VIZ4WEB)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
