make console module

--- a/runtime/Makefile
+++ b/runtime/Makefile
@@ -1,7 +1,11 @@
 CC=g++
 FLAGS?=-I.
 FILES=$(wildcard *.cpp)
+FILES_MODULES=$(wildcard modules/*.cpp)
 OBJS=$(patsubst %.cpp, %.o, $(FILES))
+OBJS+=$(patsubst modules/%.cpp, modules/%.o, $(FILES_MODULES))
+
+.PHONY:modules
 
 ifeq ($(PARAMS),DBG)
 	FLAGS+=-g3 -O0 -Wall -Wextra
@@ -9,9 +13,12 @@ endif
 
 %.o: %.cpp
 	$(CC) $< $(FLAGS) -c -o $@
-vrk: $(OBJS)
+modules:
+	$(MAKE) -C modules
+vrk: modules $(OBJS)
 	$(CC) $(OBJS) $(FLAGS) -o ../build/$@
-vizier: $(OBJS)
+vizier: modules $(OBJS)
 	$(CC) $(OBJS) $(FLAGS) -o ../build/$@
 clean:
+	$(MAKE) -C modules clean
 	rm *.o
