fixed over 1000 warnings and refactored everything (#1)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,20 @@
     "ccls.clang.extraArgs": [
         "-DRUNTIME",
         "-DASSEMBLER"
+    ],
+    "clang-tidy.fixOnSave": true,
+    "clang-tidy.buildPath": "build",
+    "clang-tidy.checks": [
+
+
+    "*",
+    "-modernize-use-trailing-return-type",
+    "-llvm-header-guard",
+    "-fuchsia-default-arguments-calls",
+    "-fuchsia-statically-constructed-objects",
+    "-cppcoreguidelines-pro-bounds-pointer-arithmetic",
+    "-*-magic-numbers",
+    "-cppcoreguidelines-pro-bounds-constant-array-index",
+    "-hicpp-signed-bitwise"
     ]
 }
