fix register indexing

--- a/runtime/Makefile
+++ b/runtime/Makefile
@@ -1,15 +1,12 @@
 CC=g++
 FLAGS?=-I.
+# FLAGS+=-g3 -O0 -Wall -Wextra
 FILES=$(wildcard *.cpp)
 FILES_MODULES=$(wildcard modules/*.cpp)
 OBJS=$(patsubst %.cpp, %.o, $(FILES))
 OBJS+=$(patsubst modules/%.cpp, modules/%.o, $(FILES_MODULES))
 
 .PHONY:modules
-
-ifeq ($(PARAMS),DBG)
-	FLAGS+=-g3 -O0 -Wall -Wextra
-endif
 
 %.o: %.cpp
 	$(CC) $< $(FLAGS) -c -o $@
