added embedded runtime

--- a/runtime-embedded/CMakeLists.txt
+++ b/runtime-embedded/CMakeLists.txt
@@ -3,7 +3,7 @@ project(viz VERSION 0.1.0)
 
 include(CTest)
 
-add_executable(vrk-tiny runtime_embedded.c types.c)
+add_executable(vrk-tiny runtime_embedded.c types.c functions_rt_embedded.c)
 add_library(arch-dep STATIC)
 target_link_libraries(vrk-tiny arch-dep)
 add_subdirectory(architecture-dependent)
