--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
     "-*-magic-numbers",
     "-cppcoreguidelines-pro-bounds-constant-array-index",
     "-hicpp-signed-bitwise",
-    "-llvm-include-order"
+    "-llvm-include-order",
+    "-android*"
     ]
 }
